bluetooth: Stop firing value changed events after gatt disconnects

Checks gatt.connected before firing an event.

BUG=681436

Review-Url: https://codereview.chromium.org/2648583004
Cr-Commit-Position: refs/heads/master@{#446809}

Former-commit-id: c4ac85eec321202ca4ecd56f0364dd49d9fb8236